cmake_minimum_required(VERSION 3.2)
project(AlgExcise)
add_subdirectory(twonumbers)
add_subdirectory(zoj)
add_subdirectory(sameIntgerInArray)
add_subdirectory(maxPointsInLine)
add_subdirectory(MinimumInRotatedSortedArray)
add_subdirectory(reverseTree)
add_subdirectory(triangle)
add_subdirectory(missingRanges)
add_subdirectory(removeElementInLinkedlist)
